// Copyright (C) 2018 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package emulator_location;

// Protobuf definition of the metadata for
// a route (path) of Location data.
//
// The actual points that define the route
// are in a separate file in the same
// directory as the .pb file. (The separate
// file is probably a JSON or XML.)

message RouteMetadata {
  // Name that the user gave this route
  required string logical_name = 1;

  // Creation time
  required int64 creation_time = 2;

  // Descriptive string given by the user
  optional string description = 3;

  // Mode of transportation
  enum Mode {
    UNKNOWN = 0;
    BIKE = 1;
    CAR = 2;
    RUN = 3;
    WALK = 4;
  }
  optional Mode mode_of_transportation = 4;

  // On playback, should we continuously repeat this route?
  // Default = false = play only once
  optional bool loop = 5;

  // Playback speed factor
  enum PlaybackSpeed {
    SPEED_1x = 0;
    SPEED_2x = 1;
    SPEED_3x = 2;
    SPEED_4x = 3;
  }
  optional PlaybackSpeed speed_factor = 6;

  // Duration of the route (the time taken at 1x)
  optional int64 duration = 7;
}
